...
            "value": "좋아요"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
...
            "value": "편집"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "編集"
...
            "value": "위젯 추가"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add Widget"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ウィジェットを追加"
...
